Fix the description content and add padding
The content was incorrect and in the mobile
version it was too close to the edges.
Therefore, additional padding was needed.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   text-align: center;
   margin: 1em auto;
   color: #ffffff;
+  padding: 0 5px;
 }
 
 #description {
